Add templates and a template parser

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@ a {
   text-transform: capitalize;
 }
 
+#cleartemplate {
+  background: #c27cff;
+}
+
 .about-conway {
   margin-top: 30px;
   margin-bottom: 100px;
